// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Checkbox should render correctly 1`] = `
<styled.div
  error={false}
  hideLabel={false}
  success={false}
>
  <label
    htmlFor="1"
  >
    <input
      aria-invalid={false}
      checked={false}
      disabled={false}
      id="1"
      name="1"
      onChange={null}
      type="checkbox"
    />
    <span
      className="checkbox__custom-checkbox"
    >
      <Icon
        icon="check"
        size="small"
      />
    </span>
    <span
      className="checkbox__label"
    >
      Checkbox Label
    </span>
  </label>
</styled.div>
`;

exports[`Checkbox Checkbox with default value should render correctly 1`] = `
<styled.div
  error={false}
  hideLabel={true}
  success={false}
>
  <label
    htmlFor="1"
  >
    <input
      aria-invalid={false}
      checked="true"
      disabled={false}
      id="1"
      name="1"
      onChange={null}
      type="checkbox"
    />
    <span
      className="checkbox__custom-checkbox"
    >
      <Icon
        icon="check"
        size="small"
      />
    </span>
    <span
      className="checkbox__label"
    />
  </label>
</styled.div>
`;

exports[`Checkbox Checkbox without label should render correctly 1`] = `
<styled.div
  error={false}
  hideLabel={true}
  success={false}
>
  <label
    htmlFor="1"
  >
    <input
      aria-invalid={false}
      checked={false}
      disabled={false}
      id="1"
      name="1"
      onChange={null}
      type="checkbox"
    />
    <span
      className="checkbox__custom-checkbox"
    >
      <Icon
        icon="check"
        size="small"
      />
    </span>
    <span
      className="checkbox__label"
    />
  </label>
</styled.div>
`;
